      the same but have been built with the same NEVRA. (CNY-3410)
    * Some unhandled tags will cause errors at build time, to
      ensure that any necessary handling is done before such
      packages are built into a repository. (CNY-3404)
    * Allow automatic sharing of InitialContents files, including ghost
      files for encapsulated RPMs

  o Bug Fixes:
    * For locale RPM dependencies, RPM flags are now properly converted 
      to conary dep flags (CNY-3411)
    * Requests to a capsule-injecting proxy no longer fail if they
      contain a mix of uncached capsule and non-capsule troves.
      (CNY-3417)
    * Pluggable policy can now override internal policy of the same
      name.  (CNY-3419)

  o Internal Changes:
    * Tests for 'group-' in a name now check for :, ensuring that the
      check doesn't match a group component.

Changes in 2.1.15:
  o New Features:
    * Recipes that have a class member list named 'pathIdSearchBranches' will
      search the branches defined in the list for pathIds to reuse while 
      cooking. (CNY-3398)

  o Bug Fixes:
    * Build groups whose flavors end up identical now causes one of those
      builds to be discarded rather than an exception about "maximum
      recursion depth exceeded" (CNY-3401)
    * Optimized population of lookaside cache for recipes containing large 
      numbers of source actions such that it is *much* faster. (CNY-3406)
    * Conary proxies will no longer cache changesets that were
      truncated in transit. Additionally, clients will produce a more
      useful error message if they download a truncated changeset.  (CNY-3140)
    * The filewrap and wrapdir options for r.Run() previously did not
      wrap fopen64 or freopen64. (CNY-3405)
    * Previously, user and password information for the http/https proxy
      were visible in a traceback if a network exception occured. (RBL-5191)
    * Split out info packages from jobs even when RPM capsules are
      used (CNY-3387)